--- a/hackathon-app/src/app/app.component.css
+++ b/hackathon-app/src/app/app.component.css
@@ -1,5 +1,4 @@
-/* Global Styles */
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -67,4 +66,14 @@
     border: 1px solid #ccc;
     border-radius: 5px;
   }
-  
+   */
+   mat-toolbar {
+    display: flex;
+    flex-direction: row;
+    /* justify-content: space-between; */
+    align-items: center;
+    background: #3f51b5;
+    color: white;
+    gap: 20px;
+    padding-left: 30rem;
+     }
