--- a/hackathon-app/src/app/app.component.html
+++ b/hackathon-app/src/app/app.component.html
@@ -1,11 +1,8 @@
-<!-- <nav>
-  <a routerLink="/">Home</a>
-  <a routerLink="/login">Login</a>
-  <a routerLink="/register">Register</a>
-  <a routerLink="/dashboard">Dashboard</a> 
-   <a routerLink="/profile">Profile</a>
-  <a routerLink="/about">About</a>
-  <a routerLink="/contact">Contact</a>
-</nav> -->
-<<app-nabar></app-nabar>>
+
+<mat-toolbar>
+  <button mat-button routerLink="/">Home</button>
+  <button mat-button routerLink="/about">About</button>
+  <button mat-button routerLink="/login">Login</button>
+  <button mat-button routerLink="/register">Register</button>
+</mat-toolbar>
 <router-outlet></router-outlet>
